# ChangeLog for dev-python/python-iwscan
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iwscan/ChangeLog,v 1.6 2009/08/30 15:55:52 nixnut Exp $

  30 Aug 2009; nixnut <nixnut@gentoo.org> python-iwscan-20080402.ebuild:
  ppc stable #282382

  23 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  python-iwscan-20080402.ebuild:
  amd64 stable, bug 282382. Tested with =net-misc/wicd-1.6.2

  13 May 2009; Christian Faulhammer <fauli@gentoo.org>
  python-iwscan-20080402.ebuild:
  keyword ~x86, bug 267052

  27 Apr 2009; Jeremy Olexa <darkside@gentoo.org> metadata.xml:
  Add to python herd as well

  26 Apr 2009; Brent Baude <ranger@gentoo.org>
  python-iwscan-20080402.ebuild:
  Marking python-iwscan-20080402 ~ppc for bug 267052

*python-iwscan-20080402 (25 Apr 2009)

  25 Apr 2009; Jeremy Olexa <darkside@gentoo.org> +metadata.xml,
  +python-iwscan-20080402.ebuild:
  Initial ebuild of dev-python/python-iwscan, written by myself.
