@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iwscan/python-iwscan-20080402.ebuild,v 1.5 2009/08/30 15:55:52 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-iwscan/python-iwscan-20080402.ebuild,v 1.6 2009/09/22 13:45:19 maekke Exp $
 
 inherit distutils
 
@@ -10,7 +10,7 @@ SRC_URI="mirror://gentoo/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ppc ~x86"
+KEYWORDS="amd64 ppc x86"
 IUSE=""
 
 DEPEND=""
