@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/Attic/wicd-1.6.2.ebuild,v 1.3 2009/08/30 15:58:28 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/wicd/Attic/wicd-1.6.2.ebuild,v 1.4 2009/09/22 13:47:46 maekke Exp $
 
 EAPI="2"
 
@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="amd64 ppc ~x86"
+KEYWORDS="amd64 ppc x86"
 IUSE="ioctl libnotify ncurses +pm-utils"
 
 DEPEND=""
